# real-world-yew-app

./: .env  .env.example  .gitignore  Cargo.toml
.cargo/: config.toml
crates/owl-actix/: Cargo.toml
crates/owl-actix/generate-db/: Cargo.toml
crates/owl-actix/generate-db/src/: main.rs
crates/owl-actix/generate-db/src/dev_db/: dev_init.rs  mod.rs
crates/owl-actix/migrations/: 00-recreate-db.sql  01-create-schema.sql  02-user_store_procedures.baksql  03-seeding_admin.baksql  20240207144401_user_table.sql  20240207152319_user_store_procedures.sql  20240209140219_views_info.sql  20240214120353_seeding_admin.sql  20240302011100_members_table.sql  20240414130128_device_table.sql  20240414131218_user_images_table.sql  20240415151112_monitoring_table.sql
crates/owl-actix/src/: appstate.rs  config.rs  envs.rs  error.rs  lib.rs  main.rs  middleware.rs
crates/owl-actix/src/services/: auth.rs  extract_token.rs  mod.rs
crates/owl-actix/src/services/admin/: admin.rs  admin_info.rs  device.rs  mod.rs  monitoring.rs
crates/owl-actix/src/services/user/: mod.rs  users.rs  users_info.rs
crates/owl-socket/: Cargo.toml
crates/owl-tauri/: tauri.conf.json
crates/owl-wasm/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
crates/owl-wasm/src/: error.rs  lib.rs  main.rs
crates/owl-wasm/src/app/: forgot_password.rs  login.rs  mod.rs  not_found.rs  settings.rs
crates/owl-wasm/src/app/home/: admins.rs  dashboard.rs  device_add.rs  device_info.rs  device_update.rs  devices.rs  edit_image.rs  member_add.rs  mod.rs  monitoring.rs  register_admin.rs  register_user.rs  update_admin.rs  update_user.rs  users.rs  view_admin.rs  view_user.rs
crates/owl-wasm/src/app/layouts/: mod.rs  side_layout.rs
crates/owl-wasm/src/assets/icons/: arrows.rs  mod.rs  owl_logo.rs  profiling.rs
crates/owl-wasm/src/components/: alerts.rs  confirm_modal.rs  edit_modal.rs  list_errors.rs  loading.rs  mod.rs  owl_logo.rs  props_error.rs  status_component.rs  user_context_provider.rs
crates/owl-wasm/src/components/home/: header.rs  mod.rs  side_button.rs
crates/owl-wasm/src/components/home/admins/: admins_table.rs  delete_admin_btn.rs  device_table.rs  mod.rs  monitoring_table.rs  search_admin.rs  search_device.rs  search_monitoring.rs
crates/owl-wasm/src/components/home/admins/device/: delete_button.rs  mod.rs
crates/owl-wasm/src/components/home/users/: add_member_modal.rs  confirm_modal.rs  delete_user_btn.rs  members_card.rs  mod.rs  search_member.rs  search_user.rs  users_table.rs
crates/owl-wasm/src/hooks/: match_email.rs  mod.rs  use_user_context.rs
crates/owl-wasm/src/services/: accounts.rs  auth.rs  devices.rs  members.rs  mod.rs  monitoring.rs  reports.rs  request.rs
crates/owl-wasm/src/types/: accounts.rs  auth.rs  devices.rs  errors.rs  feedbacks.rs  mod.rs  monitoring.rs  profile.rs  reports.rs
crates/owl-wasm/style/: output.css
