[package]
name = "owl-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-web-httpauth = "0.8.1"
chrono = { version = "0.4.31", features = ["serde"] }
argonautica = "0.2.0"
hmac = "0.12.1"
#---- JWT
jwt = "0.16.0"
jsonwebtoken = "9.2.0"

# ---- Serde
serde_with = { version = "3.6.0", features = ["time_0_3"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

sha2 = "0.10.8"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "tls-native-tls", "mysql", "chrono", "uuid", "time"] }
actix-cors = "0.7.0"

#---- Async
tokio = { version = "1.35.1", features = ["full"] }

# ---- Data
derive_more = { version = "0.99.17", features = ["from", "display"] }

#---- Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "serde"] }
