[package]
name = "owl-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4"
actix-web-httpauth = "0.8"
actix-multipart = "0.6"
chrono = { version = "0.4", features = ["serde"] }
argonautica = "0.2"
hmac = "0.12"

#---- JWT
jwt = "0.16"
jsonwebtoken = "9.2"

# ---- Serde
serde_with = { version = "3.6", features = ["time_0_3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sha2 = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "tls-native-tls", "mysql", "chrono", "uuid", "time"] }
actix-cors = "0.7"

#---- Async
tokio = { version = "1.35", features = ["full"] }

# ---- Data
derive_more = { version = "0.99", features = ["from", "display"] }

#---- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "fast-rng", "serde"] }

#----File upload
tempfile = "3.10"
mime = "0.3"
image = "0"

#---- Others
futures-util = "0.3"
sqlx-cli = "0.7"
