[package]
name = "owl-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
dotenv_codegen = "0.15.0"
gloo = "0.11"
regex = "1.10"
lazy_static = "1.4.0"
log = "0.4"
parking_lot = "0.12.1"
pulldown-cmark = "0.10.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = "1"
serde_json = "1.0"
thiserror = "1"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yew-hooks = "0.3.0"
wasm-bindgen = "0.2"
wasm-logger = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
  "HtmlInputElement",
]

[dependencies.yew_icons]
version = "0.8"
features = [
  "LucideLogOut", 
  "LucideLayoutDashboard",
  "FontAwesomeSolidClipboardUser",
  "LucideWebcam",
  "LucideMonitor",
  "FontAwesomeSolidUsers",
  "FontAwesomeSolidUsersGear",
  "BootstrapArrowRightCircle",
  "HeroiconsMiniSolidCog8Tooth",
]

[dev-dependencies]
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
gloo-utils = "0.2.0"
